# routes/index.js
@@ -4,6 +4,7 @@ routes.get('/', (req, res) => {
   res.send('Welcome to this To Do List API');
 });
 routes.use('/todo', require('./toDoList'));
+routes.use('/users', require('./users'));
 routes.use('/api-docs', require('./doc'));
 
 module.exports = routes;
